Copy the RNLanguagesExample project

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,5 @@
-rootProject.name = 'I18nExample'
+rootProject.name = 'RNLanguagesExample'
+
 include ':react-native-languages'
 project(':react-native-languages').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-languages/android')
 
