--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "I18nExample",
-  "displayName": "i18n example"
+  "name": "RNLanguagesExample",
+  "displayName": "RNLanguagesExample"
 }
