--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,10 +95,10 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
-        applicationId "com.i18nexample"
+        applicationId "com.rnlanguagesexample"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -137,7 +137,7 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-languages')
+    implementation project(':react-native-languages')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
